<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowEventNotificationActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/titleOfEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="106dp"
        android:text="@string/titleOfEvent"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionOfEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTextView" />

    <TextView
        android:id="@+id/descriptionOfEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="219dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/descriptionOfEvent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOfEvent" />

    <TextView
        android:id="@+id/eventTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="83dp"
        android:layout_marginTop="39dp"
        android:text="@string/eventTextView"
        app:layout_constraintBottom_toTopOf="@+id/titleOfEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>